--- a/styles/style.css
+++ b/styles/style.css
@@ -890,16 +890,34 @@ body {
     margin-bottom: 2rem;
 }
 
+.footer__terms {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (min-width: 768px) {
+    .footer__terms {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .footer__link__divider {
+        border-left: .1rem solid #333;
+        margin: auto 1rem;
+        height: 1.5rem;
+    }
+}
+
 .footer__link {
     text-decoration: none;
     color: #333;
+    margin: 1rem auto;
 }
 
-.footer__link__divider {
-    border-left: .1rem solid #333;
-    margin: auto 1rem;
-    height: 1.5rem;
-}
 
 .footer__logo {
     font-size: 3rem;
