--- a/styles/style.css
+++ b/styles/style.css
@@ -65,14 +65,60 @@ body {
     }
 }
 
+
 .header__content {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     font-weight: 300;
     font-size: 1.5rem;
     height: 100%;
 }
+
+@media (min-width: 768px) {
+    .header__content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.header__contact,
+.header__access {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header__access {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+
+    .header__contact,
+    .header__access {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.header__number,
+.header__mail {
+    font-weight: 100;
+    margin: .4rem 0;
+}
+
+@media (min-width: 768px) {
+    .header__number {
+        margin-right: 2rem;
+    }
+}
+
 
 .header__link {
     text-transform: uppercase;
@@ -90,6 +136,13 @@ body {
     text-transform: uppercase;
     color: #000;
     text-decoration: none;
+    margin: 1rem 0;
+}
+
+@media (min-width: 768px) {
+.header__logo {
+    margin: none;
+}    
 }
 
 .header__icon {
@@ -102,13 +155,19 @@ body {
 
 .header nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    margin:0;
+    padding:0;
+    text-align: center;
 }
 
-.header nav li {
-    margin-left: 30px;
+@media (min-width: 768px) {
+    .header nav ul {
+        display: flex;
+    }
+
+    .header nav li {
+        margin-left: 3rem;
+    }
 }
 
 .header nav a {
