banner webp trial

--- a/styles/style.css
+++ b/styles/style.css
@@ -183,8 +183,15 @@ body {
     margin: 0 auto;
 }
 
-.hero-home-bsts {
+.webp .hero-home-bsts {
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)), url('../Index-Home_Images/Hero_Home_BestSellers.webp');
+}
+
+.no-webp .hero-home-bsts {
     background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)), url('../Index-Home_Images/Hero_Home_BestSellers.jpg');
+}
+
+.hero-home-bsts {
     background-position: center bottom;
 }
 
@@ -928,10 +935,10 @@ body {
 
 .contact-bg {
     background-color: black;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 
